==> jackkc7vlo/MCUs/Nucleo-F411RE/hal/gpio_hal.c <==
#include <hw_config.h>
#include <device_gpio.h>
#include <device_rcc.h>
#include <gpio_hal.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h> /*lint -e129*/
#include <assert.h>

    p_gpio_hal_t gpio_hal_create(uint32_t port) // setup GPIO HAL instance
    {
        switch (port)
        {
#if USE_PORTA_GPIO == 1
        case GPIOA_PORT:
            gpio_hal_port_a.p_device_gpio = p_device_gpio_a;
            return (p_gpio_hal_t)&gpio_hal_port_a;
            break;
#endif // USE_PORTA_GPIO
#if USE_PORTB_GPIO == 1
        case GPIOB_PORT:
            gpio_hal_port_b.p_device_gpio = p_device_gpio_b;
            return (p_gpio_hal_t)&gpio_hal_port_b;
            break;
#endif // USE_PORTB_GPIO
#if USE_PORTC_GPIO == 1
        case GPIOC_PORT:
            gpio_hal_port_c.p_device_gpio = p_device_gpio_c;
            return (p_gpio_hal_t)&gpio_hal_port_c;
            break;
#endif // USE_PORTC_GPIO
#if USE_PORTD_GPIO == 1
        case GPIOD_PORT:
            gpio_hal_port_d.p_device_gpio = p_device_gpio_d;
            return (p_gpio_hal_t)&gpio_hal_port_d;
            break;
#endif // USE_PORTD_GPIO
#if USE_PORTE_GPIO == 1
        case GPIOE_PORT:
            gpio_hal_port_e.p_device_gpio = p_device_gpio_e;
            return (p_gpio_hal_t)&gpio_hal_port_e;
            break;
#endif // USE_PORTE_GPIO
#if USE_PORTF_GPIO == 1
        case GPIOF_PORT:
            gpio_hal_port_f.p_device_gpio = p_device_gpio_f;
            return (p_gpio_hal_t)&gpio_hal_port_f;
            break;
#endif // USE_PORTF_GPIO
#if USE_PORTG_GPIO == 1
        case GPIOG_PORT:
            gpio_hal_port_g.p_device_gpio = p_device_gpio_G;
            return (p_gpio_hal_t)&gpio_hal_port_g;
            break;
#endif // USE_PORTG_GPIO
#if USE_PORTF_GPIO == 1
        case GPIOH_PORT:
            gpio_hal_port_h.p_device_gpio = p_device_gpio_h;
            return (p_gpio_hal_t)&gpio_hal_port_h;
            break;
#endif // USE_PORTH_GPIO
        default:
            assert(false); // invalid port
            return NULL;
            break;
        }

    }

    bool gpio_hal_pin_direction(const void *p_handle, uint8_t pin, pin_direction_t direction)
    {
        p_gpio_hal_t p_gpio_hal = (p_gpio_hal_t)p_handle;
        reg_gpio_t  *p_gpio     = (reg_gpio_t *)p_gpio_hal->p_device_gpio;

        if (p_gpio != NULL)
        {
            p_gpio->moder &= ~(3U << (2U * pin)); // Clear moder bits
            switch (direction)
            {
            case INPUT:
                break; // bits already cleared
            case OUTPUT:
                p_gpio->moder |= (1U << (2U * pin)); // Set least significant bit
                break;
            case ALT:
                p_gpio->moder |= (2U << (2U * pin)); // Set most significant bit
                break;
            case ANALOG:
                p_gpio->moder |= (3U << (2U * pin)); // Set most significant bit
                break;

            default:
                return false;
                break;
            }
        }
        return true;
    }

    bool gpio_hal_pin_mode(const void *p_handle, uint8_t pin, pin_mode_t value)
    {
        p_gpio_hal_t p_gpio_hal = (p_gpio_hal_t)p_handle;
        reg_gpio_t  *p_gpio     = (reg_gpio_t *)p_gpio_hal->p_device_gpio;

        if (p_gpio != NULL)
        {

            switch (value)
            {
            case FLOAT:
                p_gpio->pupdr &= ~(3U << (2U * pin)); // Clear pull-up/pull-down bits
                break;
            case PULLUP:
                p_gpio->pupdr &= ~(3U << (2U * pin)); // Clear pull-up/pull-down bits
                p_gpio->pupdr |= (1U << (2U * pin));  // Set least significant bit
                break;
            case PULLDOWN:
                p_gpio->pupdr &= ~(3U << (2U * pin)); // Clear pull-up/pull-down bits
                p_gpio->pupdr |= (2U << (2U * pin));  // Set most significant bit
                break;
            case OPENDRAIN:
                p_gpio->otype |= (1U << pin);
                break;
            case PUSHPULL:
                p_gpio->otype &= ~(1U << pin);
                break;

            default:
                return false;
                break;
            }
        }
        return true;
    }

    void gpio_hal_set_state(const void *p_handle, uint8_t pin, bool value)
    {
        p_gpio_hal_t p_gpio_hal = (p_gpio_hal_t)p_handle;
        reg_gpio_t  *p_gpio     = (reg_gpio_t *)p_gpio_hal->p_device_gpio;
        if (value)
        {
            p_gpio->odr |= (1U << pin);
        }
        else
        {
            p_gpio->odr &= ~(1U << pin);
        }
    }

    bool gpio_hal_get_state(const void *p_handle, uint8_t pin)
    {
        p_gpio_hal_t p_gpio_hal = (p_gpio_hal_t)p_handle;
        reg_gpio_t  *p_gpio     = (reg_gpio_t *)p_gpio_hal->p_device_gpio;
        uint32_t     mode       = p_gpio->moder & (3U << (2U * pin)) >> (3U << (2U * pin));
        switch (mode)
        {
        case INPUT:
            return (p_gpio->idr & (1U << pin)) != 0u;
            break;
        case OUTPUT:
            return (p_gpio->odr & (1U << pin)) != 0u;
            break;
        }

        return false;

    }

    void gpio_hal_toggle_state(const void *p_handle, uint8_t pin)
    {
        p_gpio_hal_t p_gpio_hal = (p_gpio_hal_t)p_handle;
        reg_gpio_t  *p_gpio     = (reg_gpio_t *)p_gpio_hal->p_device_gpio;
        p_gpio->odr ^= (1U << pin);

    }

    void gpio_hal_write_port(const void *p_handle, uint8_t value)
    {
        p_gpio_hal_t p_gpio_hal = (p_gpio_hal_t)p_handle;
        reg_gpio_t  *p_gpio     = (reg_gpio_t *)p_gpio_hal->p_device_gpio;
        p_gpio->odr             = (uint32_t)value;
    }

    uint8_t gpio_hal_read_port(const void *p_handle)
    {
        p_gpio_hal_t p_gpio_hal = (p_gpio_hal_t)p_handle;
        reg_gpio_t  *p_gpio     = (reg_gpio_t *)p_gpio_hal->p_device_gpio;
        return (p_gpio->odr & 0xFFu);
    }
